welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	var x=0
	if (isBirthday) speed=5+speed
	if (speed>60) {
		if (speed<81) x=1
		else x=2
	}
	return x
}
